# winreg-rs

./: .editorconfig  .taplo.toml  CHANGELOG.md  Cargo.toml  README.md  appveyor.yml  build.rs
.github/workflows/: ci.yaml
examples/: basic_usage.rs  enum.rs  hashmap.rs  installed_apps.rs  load_app_key.rs  map_key_serialization.rs  map_serialization.rs  reg2json.rs  serialization.rs  transacted_serialization.rs  transaction.rs  transactions.rs  windows_paths.rs
examples/serialization/: Cargo.toml
examples/serialization/src/: main.rs
examples/transactions/: Cargo.toml
src/: common.rs  enum_keys.rs  enum_keys_os_string.rs  enum_values.rs  enum_values_os_string.rs  enums.rs  lib.rs  reg_key.rs  reg_key_metadata.rs  reg_value.rs  serialization.rs  transaction.rs  types.rs
src/decoder/: mod.rs  serialization_rustc.rs  serialization_serde.rs
src/encoder/: mod.rs  serialization_rustc.rs  serialization_serde.rs
tests/: reg_key.rs  serialization.rs
tests/common/: mod.rs
v0.3.3/: search-index.js
v0.3.3/src/winreg/: enums.rs.html  lib.rs.html  serialization.rs.html  transaction.rs.html  types.rs.html
v0.3.3/winreg/: index.html  struct.EnumKeys.html  struct.EnumValues.html  struct.RegKey.html  struct.RegKeyMetadata.html  struct.RegValue.html
v0.3.3/winreg/enums/: constant.HKEY_CLASSES_ROOT.html  constant.HKEY_CURRENT_CONFIG.html  constant.HKEY_CURRENT_USER.html  constant.HKEY_CURRENT_USER_LOCAL_SETTINGS.html  constant.HKEY_DYN_DATA.html  constant.HKEY_LOCAL_MACHINE.html  constant.HKEY_PERFORMANCE_DATA.html  constant.HKEY_PERFORMANCE_NLSTEXT.html  constant.HKEY_PERFORMANCE_TEXT.html  constant.HKEY_USERS.html  constant.KEY_ALL_ACCESS.html  constant.KEY_CREATE_LINK.html  constant.KEY_CREATE_SUB_KEY.html  constant.KEY_ENUMERATE_SUB_KEYS.html  constant.KEY_EXECUTE.html  constant.KEY_NOTIFY.html  constant.KEY_QUERY_VALUE.html  constant.KEY_READ.html  constant.KEY_SET_VALUE.html  constant.KEY_WOW64_32KEY.html  constant.KEY_WOW64_64KEY.html  constant.KEY_WOW64_RES.html  constant.KEY_WRITE.html  enum.RegType.html  index.html
v0.3.3/winreg/serialization/: enum.DecoderError.html  enum.EncoderError.html  index.html  struct.Decoder.html  struct.Encoder.html  type.DecodeResult.html  type.EncodeResult.html
v0.3.3/winreg/transaction/: index.html  struct.Transaction.html
v0.3.3/winreg/types/: index.html  trait.FromRegValue.html  trait.ToRegValue.html
v0.3.4/: search-index.js
v0.3.4/src/winreg/: enums.rs.html  lib.rs.html  serialization.rs.html  transaction.rs.html  types.rs.html
v0.3.4/winreg/: index.html  sidebar-items.js  struct.EnumKeys.html  struct.EnumValues.html  struct.RegKey.html  struct.RegKeyMetadata.html  struct.RegValue.html
v0.3.4/winreg/enums/: constant.HKEY_CLASSES_ROOT.html  constant.HKEY_CURRENT_CONFIG.html  constant.HKEY_CURRENT_USER.html  constant.HKEY_CURRENT_USER_LOCAL_SETTINGS.html  constant.HKEY_DYN_DATA.html  constant.HKEY_LOCAL_MACHINE.html  constant.HKEY_PERFORMANCE_DATA.html  constant.HKEY_PERFORMANCE_NLSTEXT.html  constant.HKEY_PERFORMANCE_TEXT.html  constant.HKEY_USERS.html  constant.KEY_ALL_ACCESS.html  constant.KEY_CREATE_LINK.html  constant.KEY_CREATE_SUB_KEY.html  constant.KEY_ENUMERATE_SUB_KEYS.html  constant.KEY_EXECUTE.html  constant.KEY_NOTIFY.html  constant.KEY_READ.html  (+9 more)
v0.3.5/: search-index.js
v0.3.5/winreg/: index.html  struct.EnumKeys.html  struct.EnumValues.html  struct.RegKey.html  struct.RegKeyMetadata.html  struct.RegValue.html
v0.4.0/: search-index.js
v0.4.0/winreg/: index.html  sidebar-items.js  struct.EnumKeys.html  struct.EnumValues.html  struct.RegKey.html  struct.RegKeyMetadata.html  struct.RegValue.html
v0.5.0/: search-index.js
v0.5.0/winreg/: EnumValues.t.html  RegKey.t.html  RegValue.t.html  index.html  sidebar-items.js  struct.EnumKeys.html  struct.EnumValues.html  struct.RegKey.html  struct.RegKeyMetadata.html  struct.RegValue.html
v0.5.1/: search-index.js
v0.5.1/winreg/: RegKeyMetadata.t.html  index.html  sidebar-items.js  struct.EnumKeys.html  struct.EnumValues.html  struct.RegKey.html  struct.RegKeyMetadata.html  struct.RegValue.html  type.HKEY.html
v0.6.0/: aliases.js  search-index.js
v0.6.0/winreg/: EnumKeys.t.html  HKEY.t.html  all.html  index.html  sidebar-items.js  struct.EnumKeys.html  struct.EnumValues.html  struct.RegKey.html  struct.RegKeyMetadata.html  struct.RegValue.html  type.HKEY.html
(+276 files in other folders)
