[package]
name = "winreg"
version = "0.6.0"
authors = ["Igor Shaula <gentoo90@gmail.com>"]
license = "MIT"
description = "Rust bindings to MS Windows Registry API"
repository = "https://github.com/gentoo90/winreg-rs"
documentation = "https://gentoo90.github.io/winreg-rs/v0.6.0/winreg"
readme = "README.md"
keywords = ["Windows", "WinSDK", "Registry"]
categories = ["api-bindings", "os::windows-apis"]

[dependencies]
winapi = { version = "0.3", features = ["minwindef", "winerror", "winnt", "winreg", "handleapi"] }
serde = { version = "1", optional = true }
clippy = { version = "^0", optional = true }

[dev-dependencies]
rand = "0.3"
serde_derive = "1"

[features]
transactions = ["winapi/ktmw32"]
serialization-serde = ["transactions", "serde"]

[[example]]
name = "basic_usage"

[[example]]
name = "enum"

[[example]]
name = "transactions"
required-features = ["transactions"]

[[example]]
name = "serialization"
required-features = ["serialization-serde"]

[[example]]
name = "installed_apps"
required-features = ["serialization-serde"]

[package.metadata.docs.rs]
features = ["transactions", "serialization-serde"]
default-target = "x86_64-pc-windows-msvc"
