[package]
name = "winreg"
version = "0.10.1"
authors = ["Igor Shaula <gentoo90@gmail.com>"]
license = "MIT"
description = "Rust bindings to MS Windows Registry API"
repository = "https://github.com/gentoo90/winreg-rs"
documentation = "https://docs.rs/winreg"
readme = "README.md"
keywords = ["Windows", "WinSDK", "Registry"]
categories = ["api-bindings", "os::windows-apis"]

[dependencies]
winapi = { version = "0.3.9", features = ["impl-default", "impl-debug", "minwindef", "minwinbase", "timezoneapi", "winerror", "winnt", "winreg", "handleapi"] }
chrono = { version = "0.4.6", optional = true }
serde = { version = "1", optional = true }

[dev-dependencies]
rand = "0.3"
tempfile = "~3.0"
serde_derive = "1"

[features]
transactions = ["winapi/ktmw32"]
serialization-serde = ["transactions", "serde"]

[[example]]
name = "basic_usage"
required-features = ["chrono"]

[[example]]
name = "enum"

[[example]]
name = "load_app_key"

[[example]]
name = "transactions"
required-features = ["transactions"]

[[example]]
name = "serialization"
required-features = ["serialization-serde"]

[[example]]
name = "map_key_serialization"
required-features = ["serialization-serde"]

[[example]]
name = "installed_apps"
required-features = ["serialization-serde"]

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-pc-windows-msvc", "i686-pc-windows-msvc"]
